--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,37 @@
   margin: 0;
   padding: 0;
 }
+.app {
+    display: flex;
+    height: 100vh;
+    width: 100vw;
+    flex-flow: row;
+}
+
+.controls {
+    flex-basis: 10rem;
+    display: flex;
+    flex-flow: column;
+    background: rgb(20,20,20);
+    padding: 8px;
+}
+
+.controls--field {
+    margin-bottom: 10px;
+}
+
+.controls input {
+    background: rgb(5,5,5);
+    border: 0;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 10px;
+    padding: 4px;
+    border-radius: 1px;
+}
+.controls label {
+    font-size: 10px;
+    margin-bottom: -.3em;
+    display: block;
+    color: gray;
+}
