--- a/src/Grid.css
+++ b/src/Grid.css
@@ -1,7 +1,7 @@
 .grid {
     background: black;
-    height: 100vh;
-    width: 100vw;
+    flex-basis: 100%;
+    width: 100%;
     display: grid;
 }
 
@@ -28,10 +28,16 @@
     color: white;
     background-size: 100% 100%;
     background-repeat: no-repeat;
-    border-bottom: 1px solid rgb(60,60,60);
-    border-right: 1px solid rgb(60,60,60);
+    border-radius: 4px;
+    border-bottom: 1px solid rgb(30,30,30);
+    border-right: 1px solid rgb(30,30,30);
+    position: relative;
+    cursor: pointer;
 }
 .grid-cell--counter {
     position: absolute;
     font-size: 12px;
+    mix-blend-mode: difference;
+    top: 2px;
+    left: 2px;
 }
